# PatchMatch

./: .PatchMatchBase.cpp.swp  .main.cpp.swp  CMakeLists.txt  PatchMatchRedBlack.h  PatchMatchRowColSweep.h  README.md  draw_experiment1.py  draw_experiment2.py  draw_experiment3.py  pm_red_black.cpp  pm_rows_cols_sweep.cpp
include/: DisparityPlane.h  Matrix2D.h  PatchMatch.h  PatchMatchBase.h
src/: CMakeLists.txt  DisparityPlane.cpp  Matrix2D.cpp  PatchMatch.cpp  PatchMatchBase.cpp  PatchMatchRedBlack.cpp  PatchMatchRowColSweep.cpp  pm.cpp
